GNOME Bugzilla – Bug 766449
ges: fix various leaks with usage of ges_timeline_element_lookup_child
Last modified: 2016-07-04 10:51:57 UTC
Some internal caller of ges_timeline_element_lookup_child forgot to unref out values causing some leaks.
Created attachment 327893 [details] [review] ges: fix various leaks with usage of ges_timeline_element_lookup_child
(In reply to Aurélien Zanelli from comment #1) > Created attachment 327893 [details] [review] [review] > ges: fix various leaks with usage of ges_timeline_element_lookup_child I found that this patch causes or reveals an issue when disposing of GstFramePositioner with video track. I will try to look at it tomorrow, if no one is quicker than me :)
Aurélien: any updates?
Comment on attachment 327893 [details] [review] ges: fix various leaks with usage of ges_timeline_element_lookup_child as per comment.
I forgot to update this report. The issue revealed by this patch was bug 766525 which is now fixed. So we could review this patch and commit it if it's good.
Thanks, pushed: commit 96a8c6db0ca5b1d74575da914c3d11fcccb8469a Author: Aurélien Zanelli <aurelien.zanelli@darkosphere.fr> Date: Sat May 14 19:33:05 2016 +0200 ges: fix various leaks with usage of ges_timeline_element_lookup_child Some callers forgot to unref out child, pspec or both leading to leaks. https://bugzilla.gnome.org/show_bug.cgi?id=766449 (looks all fine to me)
Should this go into 1.8?