ges: fix various leaks with usage of ges_timeline_element_lookup_child

Some callers forgot to unref out child, pspec or both leading to leaks.

https://bugzilla.gnome.org/show_bug.cgi?id=766449